--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server",
     "client": "npm start --prefix client",
+    "build": "npm run-script build --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
@@ -21,12 +22,13 @@
   "homepage": "https://github.com/Rrojaski/no-anime#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "config": "^3.1.0",
-    "express": "^4.16.4",
-    "express-validator": "^5.3.1",
+    "body-parser": "^1.19.0",
+    "config": "^3.2.2",
+    "express": "^4.17.1",
+    "express-validator": "^6.2.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.1",
+    "mongoose": "^5.7.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
